penerima ardi
